Bug fixing, - nav bar fixed on all pages - recording page fixed mostly / still one slight issue - login pages all aligned / kinda

--- a/projectfirecast/static/studio/css/Record.css
+++ b/projectfirecast/static/studio/css/Record.css
@@ -269,6 +269,7 @@ h1{
     .navbar-brand{
          font-family: Walkway;
           font-size: 24px;
+        border-radius: 0px;
       }
     .img-fluid {
         max-width: 100vw;
