--- a/projectfirecast/static/styles/Main-CSS.css
+++ b/projectfirecast/static/styles/Main-CSS.css
@@ -79,7 +79,12 @@ h1{
     a.podcast_title:active {
         text-decoration: none;
     }
-
+    .login{
+        font-family: Walkway;
+        font-size: 25px;
+        text-align: center;
+        color: white;
+    }
 
 
     a{
@@ -104,6 +109,10 @@ h1{
         width:100%;
         max-height: 100vh;
 }
+    input.p{
+        padding-right: 50px;
+
+    }
 
     form{
       text-align: center;
@@ -143,4 +152,36 @@ h1{
          font-family: Walkway;
          font-style: italic;
     }
+
+        /* to fix the wonky login forms*/
+    form {
+    width: 80%;
+    margin: 0 auto;
+    }
+
+    label, input {
+        /* in order to define widths */
+        display: inline-block;
+    }
+
+    label {
+        width: 30%;
+        /* positions the label text beside the input */
+        text-align: right;
+    }
+
+    label + input {
+        width: 30%;
+        /* large margin-right to force the next element to the new-line
+           and margin-left to create a gutter between the label and input */
+        margin: 0 30% 0 4%;
+    }
+
+    /* only the submit button is matched by this selector,
+       but to be sure you could use an id or class for that button */
+    input + input {
+        float: right;
+    }
+
+
 
